<resources>
    <string name="app_name">MyFundooApp</string>
    <string name="welcome_text">Welcome to FUNDOO !!!!!</string>
    <string name="have_account">Already Have Account</string>
    <string name="need_account">"Don't have an account?"</string>
    <string name="create_act">Create a New Account</string>
    <string name="name">Enter Username</string>
    <string name="email">Enter Email</string>
    <string name="submit">SUBMIT</string>
    <string name="login">LOGIN</string>
    <string name="password">Enter Password</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_notes">Notes</string>
    <string name="navigation_drawer_reminders">Reminders</string>
    <string name="navigation_drawer_create_new_model">Create new model</string>
    <string name="navigation_drawer_archive">Archive</string>
    <string name="navigation_drawer_delete">Deleted</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_help">Help and feedback</string>
    <string name="facebook_app_id">546562535905617</string>
    <string name="fb_login_protocol_scheme">fb546562535905617</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
