<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/back1">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="331dp"
        android:layout_height="331dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1"
        android:paddingTop="20dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="311dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:textAllCaps="true"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="#0A0A0A"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="291dp"
        android:layout_height="54dp"
        android:layout_marginTop="72dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/need_account"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="291dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
</androidx.constraintlayout.widget.ConstraintLayout>