<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_module.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="123dp"
        android:layout_height="111dp"
        android:cropToPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@drawable/keepicon" />

    <TextView
        android:id="@+id/tv_create_heading"
        android:layout_width="136dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#252222"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.015" />

    <EditText
        android:id="@+id/loginEmailET"
        android:layout_width="332dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#1A1919"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_heading" />

    <TextView
        android:id="@+id/loginTextInputEmail"
        android:layout_width="314dp"
        android:layout_height="24dp"
        android:textColor="#F00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginEmailET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginEmailET"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailET"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/loginPasswordET"
        android:layout_width="332dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#1A1919"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/loginEmailET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginEmailET"
        app:layout_constraintTop_toBottomOf="@+id/loginTextInputEmail" />

    <TextView
        android:id="@+id/loginTextInputPassword"
        android:layout_width="314dp"
        android:layout_height="24dp"
        android:textColor="#F00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginPasswordET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginPasswordET"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordET"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/loginButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#f9a602"
        android:text="@string/login"
        android:textColor="#1A1919"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/createAccountTextLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordET"
        app:layout_constraintVertical_bias="0.162" />

    <Button
        android:id="@+id/googleSignIn"
        android:layout_width="234dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:text="Google SignIn"
        app:layout_constraintBottom_toTopOf="@+id/createAccountTextLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButtonId"
        app:layout_constraintVertical_bias="0.0" />


    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/createAccountTextLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleSignIn"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/createAccountTextLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need_account"
        android:textColor="#268ADA"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextInputPassword"
        app:layout_constraintVertical_bias="0.862" />


</androidx.constraintlayout.widget.ConstraintLayout>